# forge-ota-lab

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.agents/rules/: system-prompt.md
.agents/skills/frontend-design/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/dev.forgeotalab.data.ForgeDatabase/: 1.json  3.json
app/src/androidTest/kotlin/dev/forgeotalab/integration/: CorpusIntegrationTest.kt  FaultInjectionTest.kt  NativeBridgePanicContainmentTest.kt  WorkManagerResumeTest.kt
app/src/androidTest/kotlin/dev/forgeotalab/ui/: AccessibilityAuditTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/forgeotalab/: ForgeApplication.kt  MainActivity.kt
app/src/main/kotlin/dev/forgeotalab/data/: ForgeDatabase.kt  ForgePreferences.kt
app/src/main/kotlin/dev/forgeotalab/di/: AppModule.kt  DatabaseModule.kt  RepositoryModule.kt  WorkerModule.kt
app/src/main/kotlin/dev/forgeotalab/diagnostics/: CrashReportingManager.kt
app/src/main/kotlin/dev/forgeotalab/domain/: BaseCacheManager.kt  BrowseFilesystemUseCase.kt  CancelExtractionUseCase.kt  CheckPrerequisitesUseCase.kt  CleanupInterruptedJobUseCase.kt  DiagnosticsExportUseCase.kt  ExportFilesystemFileUseCase.kt  FeatureFlagManager.kt  FormatReportExportUseCase.kt  ImportPackageUseCase.kt  ManifestSignatureVerifier.kt  PreflightValidator.kt  ReExtractPartitionUseCase.kt  ResumeExtractionUseCase.kt  ShareArtifactUseCase.kt  StartExtractionUseCase.kt  StorageEstimateCalculator.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: font_certs.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
baselineprofile/: build.gradle.kts
core-extractor-rs/: Cargo.toml  build.gradle.kts  consumer-rules.pro
core-extractor-rs/.cargo/: config.toml
core-extractor-rs/corpus-gen/: Cargo.toml
core-extractor-rs/corpus-gen/src/: main.rs
core-extractor-rs/crates/adapters/: Cargo.toml
core-extractor-rs/crates/adapters/src/: lib.rs  payload_adapter.rs  registry.rs
core-extractor-rs/crates/filesystems/: Cargo.toml
core-extractor-rs/crates/filesystems/src/: detect.rs  ext4.rs  lib.rs
core-extractor-rs/crates/images/: Cargo.toml
core-extractor-rs/crates/images/src/: lib.rs
core-extractor-rs/crates/payload/: Cargo.toml  build.rs
core-extractor-rs/crates/payload/src/: analysis.rs  error.rs  extraction.rs  header.rs  lib.rs  manifest.rs  proto.rs  types.rs
core-extractor-rs/crates/sniff/: Cargo.toml
core-extractor-rs/crates/sniff/src/: lib.rs
core-extractor-rs/crates/verification/: Cargo.toml
core-extractor-rs/crates/verification/src/: lib.rs
core-extractor-rs/forge-jni/: Cargo.toml
core-extractor-rs/forge-jni/src/: jni_helpers.rs  lib.rs
core-extractor-rs/proto/: update_metadata.proto
core-extractor-rs/src/main/: AndroidManifest.xml
core-extractor-rs/src/main/kotlin/dev/forgeotalab/nativebridge/: ExtractionCallback.kt  ExtractionResult.kt  FsBrowseNativeResult.kt  NativeBridge.kt
core-extractor-rs/tests/: fault_injection.rs  integration_corpus.rs
docs/status/: current-state.md
gradle/: libs.versions.toml
prd/: PRD-ForgeOTALab.md
prd/tokens/: components.json  primitives.json  semantic.json
shared-contracts/: build.gradle.kts
store/: listing.md
store/release-notes/: 0.1.0.md  1.0.0.md
test-corpus/: README.md
(+92 files in other folders)
