[package]
name = "forge-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge-sniff = { path = "../sniff" }
forge-payload = { path = "../payload" }
forge-verification = { path = "../verification" }
forge-images = { path = "../images" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
