[package]
name = "forge-payload"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge-sniff = { path = "../sniff" }
forge-verification = { path = "../verification" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }
xz2 = { workspace = true }
bzip2 = { workspace = true }
zstd = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
